# effil

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  build-and-test.sh  build.gradle  build.sh  ci.sh  cmake.yml  flame-graph.sh  perf.lua
.github/workflows/: cmake.yml  nix_ci.yml  win_ci.yml
ci/: install.sh  test_all.bat  test_all.sh
docs/: channel.md  garbage-collector.md  index.md  table.md  thread.md  types.md
examples/: async.lua
gradle/wrapper/: gradle-wrapper.properties
lua-api/: woofer.lua
lua-tests/: run_tests.lua  smoke_test.lua
pool/: heap.lua  thread_pool.lua
rockspecs/: effil-1.0-0.rockspec  effil-1.1-0.rockspec  effil-1.1-1.rockspec
src/: lua-module.cpp  shared-table.cpp  shared-table.h  spin-mutex.h  stored-object.cpp  stored-object.h  threading.cpp  threading.h  utils.h
src/cpp/: cache.cpp  cache.h  channel.cpp  channel.h  clock.cpp  clock.h  function.cpp  function.h  garbage-collector.cpp  garbage-collector.h  gc-data.cpp  gc-data.h  gc-object.cpp  gc-object.h  impl.cpp  impl.h  logger.cpp  logger.h  lru_cache.h  lua-helpers.cpp  lua-helpers.h  lua-module.cpp  notifier.h  shared-table.cpp  shared-table.h  spin-mutex.cpp  spin-mutex.h  stored-object.cpp  stored-object.h  this-thread.cpp  this-thread.h  this_thread.h  thread-handle.cpp  thread-handle.h  thread-runner.cpp  thread-runner.h  thread.cpp  thread.h  thread_runner.cpp  thread_runner.h  (+5 more)
src/lua/: effil.lua
tests/: shared-table.cpp  smoke_test.lua
tests/cpp/: garbage-collector.cpp  notifier.cpp  shared-table.cpp  test-main.cpp  test-utils.h
tests/lua/: bootstrap-tests.lua  cache.lua  cancel_callback.lua  channel-stress.lua  channel.lua  clock.lua  dump_table.lua  function.lua  functions.lua  gc-stress.lua  gc.lua  metatable.lua  mutex.lua  run-all-tests.lua  run_tests  run_tests.lua  shared-table-perf.lua  shared-table.lua  shared_table.lua  size.lua  smoke_test.lua  test_utils.lua  tests.lua  thread-interrupt.lua  thread-stress.lua  thread.lua  type.lua  type_mismatch.lua  upvalues.lua
tests/utils/: flame-graph.sh
